Refactoring initial methods.
