# src/main/java/br/com/ada/f1rst/mail/api/ApiException.java
@@ -1,0 +1,10 @@
+package br.com.ada.f1rst.mail.api;
+
+@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.SpringCodegen", date = "2023-04-12T22:46:14.551837857Z[GMT]")
+public class ApiException extends Exception {
+    private int code;
+    public ApiException (int code, String msg) {
+        super(msg);
+        this.code = code;
+    }
+}
